--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
     <meta charset="UTF-8">
     <title>Ramen Rose</title>
     <link rel="icon" href="images/favicon/favicon.ico">
-    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,400i,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,900&display=swap" rel="stylesheet">
     <link href="normalize%20css/normalize.css" rel="stylesheet">
-    <link href="custom%20css/style.css" rel="stylesheet">
+    <link href="custom%20css/style.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-
 
 </body>
 <script src="custom%20js/index.js" rel="script"></script>
