ramen-rose-2> Add hero image section with order food and book table button complete with transition on hover and click

--- a/index.html
+++ b/index.html
@@ -7,9 +7,17 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,900&display=swap" rel="stylesheet">
     <link href="normalize%20css/normalize.css" rel="stylesheet">
     <link href="custom%20css/style.css" rel="stylesheet" type="text/css">
+    <link href="custom%20css/grid.css " rel="stylesheet" type="text/css">
 </head>
 <body>
-
+<header class="header">
+    <div class="hero-text-box">
+        <h1 class="hero-text row">Authentic Japanese Cuisine
+        </h1>
+        <a href="#" class="btn btn-full" id="btn-order-food ">Order Food</a>
+        <a href="#" class="btn btn-ghost" id="btn-book-table">Book Table</a>
+    </div>
+</header>
 </body>
 <script src="custom%20js/index.js" rel="script"></script>
 <script
