--- a/index.html
+++ b/index.html
@@ -11,8 +11,10 @@
 </head>
 <body>
 <header class="header">
+
+
     <div class="hero-text-box">
-        <h1 class="hero-text row">Authentic Japanese Cuisine
+        <h1 class="heading-text row">Authentic Japanese Cuisine
         </h1>
         <a href="#" class="btn btn-full" id="btn-order-food ">Order Food</a>
         <a href="#" class="btn btn-ghost" id="btn-book-table">Book Table</a>
