--- a/index.html
+++ b/index.html
@@ -11,6 +11,39 @@
 </head>
 <body>
 <header class="header">
+    <nav class="navbar">
+        <div class="row">
+            <a class="brand" href="#">
+                <img src="images/logo/logo3.png" alt="Ramen-Rose Logo" class="logo">
+                <span class="brand-name"> Ramen Rose</span>
+            </a>
+            <ul class="menu">
+                <li class="btn-menu"><a href="#">Menu</a></li>
+                <li class="btn-book-table"><a href="#">Book Table</a></li>
+                <li class="btn-contact-us"><a href="#">Contact Us</a></li>
+                <li class="btn-about-us"><a href="#">About us</a></li>
+                <li class="btn-cart"><a href="#"><i class="fas fa-shopping-cart"></i>
+                </a></li>
+                <li><a href="#" class="btn-sign-up">Sign up
+                </a></li>
+                <!--            User account if user has signed in-->
+                <!--            <li class="btn-user"><a href="#"><i class="fas fa-user-circle"></i>-->
+                <!--            </a>-->
+                <!--               </li>-->
+            </ul>
+        </div>
+    </nav>
+    <!-- User account Drop down menu-->
+    <!--<nav class="navbar-dropdown">-->
+    <!--    <div class="row dropdown-content">-->
+    <!--        <ul class="dropdown-options">-->
+    <!--            <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
+    <!--            <li><a class="offers"><i class="fas fa-tags"></i>Offers</a></li>-->
+    <!--            <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
+    <!--            <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
+    <!--        </ul>-->
+    <!--    </div>-->
+    <!--</nav>-->
 
 
     <div class="hero-text-box">
@@ -26,4 +59,5 @@
         src="https://code.jquery.com/jquery-3.4.1.min.js"
         integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
         crossorigin="anonymous"></script>
+<script src="https://kit.fontawesome.com/6c3069d10e.js" crossorigin="anonymous"></script>
 </html>
