--- a/index.html
+++ b/index.html
@@ -34,16 +34,16 @@
         </div>
     </nav>
     <!-- User account Drop down menu-->
-<!--    <nav class="navbar-dropdown">-->
-<!--        <div class="row dropdown-content">-->
-<!--            <ul class="dropdown-options">-->
-<!--                <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
-<!--                <li><a class="offers"><i class="fas fa-tags"></i>Offers</a></li>-->
-<!--                <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
-<!--                <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
-<!--            </ul>-->
-<!--        </div>-->
-<!--    </nav>-->
+    <!--    <nav class="navbar-dropdown">-->
+    <!--        <div class="row dropdown-content">-->
+    <!--            <ul class="dropdown-options">-->
+    <!--                <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
+    <!--                <li><a class="offers"><i class="fas fa-tags"></i>Offers</a></li>-->
+    <!--                <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
+    <!--                <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
+    <!--            </ul>-->
+    <!--        </div>-->
+    <!--    </nav>-->
 
 
     <div class="hero-text-box">
@@ -53,6 +53,62 @@
         <a href="#" class="btn btn-ghost" id="btn-book-table">Book Table</a>
     </div>
 </header>
+<section class="section-features">
+    <div class="row ">
+        <div class=" col span-1-of-1 feature-heading-section section-group">
+            <h2 class="feature-heading">Celebrating the culture and cuisine of Japan</h2>
+            <p>Hello we are Ramen Rose, one of the most popular high-end japanese restaurant in Islamabad. Only at Ramen
+                Rose will you find a unique blend of Japanese and Pakistani culture and cuisine. We know you are busy.
+                No time for cooking. So let us take care of that, we're really good at it, we promise!</p>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col span-1-of-4 feature-home-delivery">
+            <i class="fa fa-motorcycle"></i>
+            <h2 class="feature-home-delivery-heading">Home Delivery</h2>
+        </div>
+        <div class="col span-1-of-4 feature-100-organic">
+            <i class="fab fa-envira"></i>
+            <h2 class="feature-100-organic-heading">100% organic</h2>
+
+        </div>
+        <div class="col span-1-of-4 feature-our-food">
+            <i class="fa fa-fish"></i>
+            <h2 class="feature-our-food-heading">Our Food</h2>
+
+        </div>
+        <div class="col span-1-of-4 feature-dining-experience">
+            <i class="fa fa-utensils"></i>
+            <h2 class="feature-dining-experience-heading">Dining Experience</h2>
+
+        </div>
+    </div>
+    <div class="row features-details">
+        <div class="col span-1-of-4 home-delivery">
+
+            <p>You're only 20 minutes away from your delicious and super healthy meals delivered right to your home </p>
+        </div>
+        <div class="col span-1-of-4 organic">
+
+            <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or
+                antibiotics.
+                Good for your health, the environment, and ensure that you're 100% happy</p>
+        </div>
+        <div class="col span-1-of-4 our-food">
+
+            <p>With culinary inspirations from both Japan and Pakistan our menus offer robust dining options.
+                Japanese tempura and sushi; Pakistani Mughlai Cuisine and BAR B Q; Vegetarian, vegan or gluten
+                conscious?
+                We’ve got that covered too.</p>
+        </div>
+        <div class="col span-1-of-4 dining-experience">
+
+            <p>Ramen Rose offers a unique blend of Japanese and pakistani
+                cuisine with fine
+                dining services; this is being done first time in Pakistan.</p>
+        </div>
+    </div>
+</section>
 </body>
 <script src="custom%20js/index.js" rel="script"></script>
 <script
