ramen-rose-3> Created html Pages remove extra padding from the header

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 <body>
 <header class="header">
     <nav class="navbar">
-        <div class="row">
+        <div class="row ">
             <a class="brand" href="#">
                 <img src="images/logo/logo3.png" alt="Ramen-Rose Logo" class="logo">
                 <span class="brand-name"> Ramen Rose</span>
             </a>
             <ul class="menu">
-                <li class="btn-menu"><a href="#">Menu</a></li>
-                <li class="btn-book-table"><a href="#">Book Table</a></li>
-                <li class="btn-contact-us"><a href="#">Contact Us</a></li>
-                <li class="btn-about-us"><a href="#">About us</a></li>
-                <li class="btn-cart"><a href="#"><i class="fas fa-shopping-cart"></i>
+                <li class="btn-menu"><a href="html/menu.html">Menu</a></li>
+                <li class="btn-book-table"><a href="html/book-table.html">Book Table</a></li>
+                <li class="btn-contact-us"><a href="html/contact-us.html">Contact Us</a></li>
+                <li class="btn-about-us"><a href="html/about.html">About us</a></li>
+                <li class="btn-cart"><a href="html/cart.html"><i class="fas fa-shopping-cart"></i>
                 </a></li>
                 <li><a href="#" class="btn-sign-up">Sign up
                 </a></li>
@@ -49,8 +49,8 @@
     <div class="hero-text-box">
         <h1 class="heading-text row">Authentic Japanese Cuisine
         </h1>
-        <a href="#" class="btn btn-full" id="btn-order-food ">Order Food</a>
-        <a href="#" class="btn btn-ghost" id="btn-book-table">Book Table</a>
+        <a href="html/menu.html" class="btn btn-full" id="btn-order-food ">Order Food</a>
+        <a href="html/book-table.html" class="btn btn-ghost" id="btn-book-table">Book Table</a>
     </div>
 </header>
 <section class="section-features">
