ramen-rose-3> remove error

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <link rel="icon" href="images/favicon/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,300i,400,700,900&display=swap" rel="stylesheet">
     <link href="normalize%20css/normalize.css" rel="stylesheet">
-    <link href="custom%20css/style.css" rel="stylesheet" type="text/css">
-    <link href="custom%20css/grid.css " rel="stylesheet" type="text/css">
+    <link href="css/style.css" rel="stylesheet" type="text/css">
+    <link href="css/grid.css " rel="stylesheet" type="text/css">
 </head>
 <body>
 <header class="header">
