ramen-rose-3> aligned elements in feature section

--- a/index.html
+++ b/index.html
@@ -62,13 +62,13 @@
 <section class="section-features">
     <div class="row feature-heading-section">
         <h2 class="feature-heading">Celebrating the culture and cuisine of Japan</h2>
-        <p>Hello we are Ramen Rose, one of the most popular high-end japanese restaurant in Islamabad. Only at Ramen
+        <p class="feature-long-text">Hello we are Ramen Rose, one of the most popular high-end japanese restaurant in Islamabad. Only at Ramen
             Rose will you find a unique blend of Japanese and Pakistani culture and cuisine. We know you are busy.
             No time for cooking. So let us take care of that, we're really good at it, we promise!</p>
     </div>
     <div class="row features">
         <div class="col span-1-of-4 feature-home-delivery">
-            <i class="ion-home"></i>
+            <i class="ion-android-home"></i>
             <h3 class="feature-home-delivery-heading">Home Delivery</h3>
             <p>You're only 20 minutes away from your delicious and super healthy meals delivered right to your home </p>
 
