ramen-rose-3> Add notification bubble to cart , user account icon in menu and offers in dropdown menu

--- a/index.html
+++ b/index.html
@@ -23,37 +23,43 @@
                 <li class="btn-book-table"><a href="html/book-table.html">Book Table</a></li>
                 <li class="btn-contact-us"><a href="html/contact-us.html">Contact Us</a></li>
                 <li class="btn-about-us"><a href="html/about.html">About us</a></li>
-                    <ul class="special-buttons">
-                <li class="btn-cart"><a href="html/cart.html"><i class="ion-ios-cart-outline"></i>
-                </a></li>
-                <li class="sign-up"><a href="#" class="btn-sign-up">Sign up
-                </a></li>
+                <ul class="special-buttons">
+                    <li class="btn-cart"><a href="html/cart.html"><span><i
+                            class="ion-ios-cart-outline cart-bubble"></i></span>
+                        <span
+                                class="cart-bubble-text bubble">100</span>
+                    </a></li>
+                    <li class="sign-up"><a href="#" class="btn-sign-up">Sign up
+                    </a></li>
 
-                <!-- User account if user has signed in-->
-<!--                <li ><a href="#" class="btn-user"><i class="ion-ios-contact-outline"></i>-->
-<!--                </a></li>-->
+<!--                    User account if user has signed in-->
+<!--                    <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>-->
+<!--                        <span-->
+<!--                                class="user-bubble-text bubble">100</span>-->
+<!--                    </a></li>-->
 
-                    </ul>
+                </ul>
             </ul>
         </div>
     </nav>
 
 
-    <!-- User account Drop down menu-->
-<!--        <nav class="navbar-dropdown">-->
-<!--            <div class="row dropdown-content">-->
-<!--                <ul class="dropdown-options">-->
-<!--                    <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
-<!--                    <li><a class="offers"><i class="fas fa-tags"></i>Offers</a></li>-->
-<!--                    <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
-<!--                    <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
-<!--                </ul>-->
-<!--            </div>-->
-<!--        </nav>-->
+<!--     User account Drop down menu-->
+<!--            <nav class="navbar-dropdown">-->
+<!--                <div class="row dropdown-content">-->
+<!--                    <ul class="dropdown-options">-->
+<!--                        <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
+<!--                        <li><a class="offers"><i class="fas fa-tags"></i>Offers  <span-->
+<!--                                class="offers-bubble-text bubble">100</span></a></li>-->
+<!--                        <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
+<!--                        <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
+<!--                    </ul>-->
+<!--                </div>-->
+<!--            </nav>-->
 
 
     <div class="hero-text-box">
-        <h1 class="heading-text row">Authentic Japanese Cuisine
+        <h1 class="heading-1 row">Authentic Japanese Cuisine
         </h1>
         <a href="html/menu.html" class="btn btn-full" id="btn-order-food ">Order Food</a>
         <a href="html/book-table.html" class="btn btn-ghost" id="btn-book-table">Book Table</a>
@@ -61,41 +67,44 @@
 </header>
 <section class="section-features">
     <div class="row feature-heading-section">
-        <h2 class="feature-heading">Celebrating the culture and cuisine of Japan</h2>
-        <p class="feature-long-text">Hello we are Ramen Rose, one of the most popular high-end japanese restaurant in Islamabad. Only at Ramen
+        <h2 class="heading-2">Celebrating the culture and cuisine of Japan</h2>
+        <p class="feature-long-text">Hello we are Ramen Rose, one of the most popular high-end japanese restaurant in
+            Islamabad. Only at Ramen
             Rose will you find a unique blend of Japanese and Pakistani culture and cuisine. We know you are busy.
             No time for cooking. So let us take care of that, we're really good at it, we promise!</p>
     </div>
     <div class="row features">
-        <div class="col span-1-of-4 feature-home-delivery">
+        <div class="col span-1-of-4 box">
             <i class="ion-android-home"></i>
-            <h3 class="feature-home-delivery-heading">Home Delivery</h3>
-            <p>You're only 20 minutes away from your delicious and super healthy meals delivered right to your home </p>
+            <h3 class="heading-3">Home Delivery</h3>
+            <p>You're only 20 minutes away from your delicious and super healthy meals delivered right to your home.
+                Become a member to get special offers and discounts.</p>
 
         </div>
-        <div class="col span-1-of-4 feature-100-organic">
+        <div class="col span-1-of-4 box">
             <i class="ion-leaf"></i>
-            <h3 class="feature-100-organic-heading">100% organic</h3>
+            <h3 class="heading-3">100% organic</h3>
             <p>All our vegetables are fresh, organic and local. Animals are raised without added hormones or
                 antibiotics.
-                Good for your health, the environment, and ensure that you're 100% happy</p>
+                Good for your health, the environment, and ensure that you're 100% happy.</p>
 
         </div>
-        <div class="col span-1-of-4 feature-our-food">
+        <div class="col span-1-of-4 box">
             <i class="ion-wineglass"></i>
-            <h3 class="feature-our-food-heading">Our Food</h3>
+            <h3 class="heading-3">Our Food</h3>
             <p>With culinary inspirations from both Japan and Pakistan our menus offer robust dining options.
                 Japanese tempura and sushi; Pakistani Mughlai Cuisine and BAR B Q; Vegetarian, vegan or gluten
                 conscious?
                 We’ve got that covered too.</p>
 
         </div>
-        <div class="col span-1-of-4 feature-dining-experience">
+        <div class="col span-1-of-4 box">
             <i class="ion-spoon"></i>
-            <h3 class="feature-dining-experience-heading">Dining Experience</h3>
+            <h3 class="heading-3">Dining Experience</h3>
             <p>Ramen Rose offers a unique blend of Japanese and pakistani
                 cuisine with fine
-                dining services; this is being done first time in Pakistan.</p>
+                dining services; this is being done first time in Pakistan. Make your dining experience a memorable
+                one! </p>
 
         </div>
     </div>
