--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
                     <li class="sign-up"><a href="#" class="btn-sign-up">Sign up
                     </a></li>
 
-<!--                    User account if user has signed in-->
-<!--                    <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>-->
-<!--                        <span-->
-<!--                                class="user-bubble-text bubble">100</span>-->
-<!--                    </a></li>-->
+                    <!--                    User account if user has signed in-->
+                    <!--                    <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>-->
+                    <!--                        <span-->
+                    <!--                                class="user-bubble-text bubble">100</span>-->
+                    <!--                    </a></li>-->
 
                 </ul>
             </ul>
@@ -44,18 +44,18 @@
     </nav>
 
 
-<!--     User account Drop down menu-->
-<!--            <nav class="navbar-dropdown">-->
-<!--                <div class="row dropdown-content">-->
-<!--                    <ul class="dropdown-options">-->
-<!--                        <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
-<!--                        <li><a class="offers"><i class="fas fa-tags"></i>Offers  <span-->
-<!--                                class="offers-bubble-text bubble">100</span></a></li>-->
-<!--                        <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
-<!--                        <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
-<!--                    </ul>-->
-<!--                </div>-->
-<!--            </nav>-->
+    <!--     User account Drop down menu-->
+    <!--            <nav class="navbar-dropdown">-->
+    <!--                <div class="row dropdown-content">-->
+    <!--                    <ul class="dropdown-options">-->
+    <!--                        <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
+    <!--                        <li><a class="offers"><i class="fas fa-tags"></i>Offers  <span-->
+    <!--                                class="offers-bubble-text bubble">100</span></a></li>-->
+    <!--                        <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
+    <!--                        <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
+    <!--                    </ul>-->
+    <!--                </div>-->
+    <!--            </nav>-->
 
 
     <div class="hero-text-box">
@@ -112,48 +112,79 @@
 </section>
 <section class="section-favourite-meals">
     <h2 class="heading-2 favourite-meals-heading">Our Famous Dishes</h2>
-    <h3 class="heading-3">Japanese cuisine</h3>
-<ul class="meals-showcase-1">
-    <li class="image-1 span-1-of-4" >
-        <figure ><img src="images/menu-items/Bun-Dumpling/Tianjin%20Steamed%20Pork%20Bun.jpg"  class="galley-image" alt="Tianjin Steamed Pork Bun"></figure>
-    </li>
-    <li class="image-2 span-1-of-4">
-        <figure ><img src="images/menu-items/Rice%20and%20Noodles/Beef%20Chow%20Mein.jpg"  class="galley-image" alt="Beef Chow Mein"></figure>
-    </li>
-    <li class="image-3 span-1-of-4">
-        <figure ><img src="images/menu-items/Sushi/Rainbow%20Roll.jpg"  class="galley-image" alt="Sushi"></figure>
-    </li>
-    <li class="image-4 span-1-of-4">
-        <figure ><img src="images/menu-items/Chicken/Kung%20Pao%20Chicken.jpg" class="galley-image"  alt="Kung pao chicken"></figure>
-    </li>
-</ul>
-    <ul class="meals-showcase-2">
-        <li class="image-5 span-1-of-4" >
-            <figure ><img src="images/menu-items/Vegetable/Spicy%20Ma%20Po%20Tofu.jpg"  class="galley-image" alt="Spicy Ma Po Tofu"></figure>
+    <h3 class="heading-3 category-heading">Japanese cuisine</h3>
+    <ul class="meals-showcase-1">
+        <li class="image-1 span-1-of-4">
+            <figure><img src="images/menu-items/Bun-Dumpling/Spicy%20Wonton.jpg" class="galley-image"
+                         alt="Spicy Wonton">
+                <h3 class="heading-3 image-caption">Spicy Wonton</h3></figure>
         </li>
-        <li class="image-6 span-1-of-4">
-            <figure ><img src="images/menu-items/Beef/Beef%20Fillet%20with%20Honey%20Sauce.jpg"  class="galley-image" alt="Beef Fillet with Honey Sauce"></figure>
+        <li class="image-2 span-1-of-4">
+            <figure><img src="images/menu-items/Rice%20and%20Noodles/Beef%20Chow%20Mein.jpg" class="galley-image"
+                         alt="Beef Chow Mein">
+                <h3 class="heading-3 image-caption">Beef Chow Mein</h3>
+            </figure>
         </li>
-        <li class="image-7 span-1-of-4">
-            <figure ><img src="images/menu-items/Rice%20and%20Noodles/Combination%20Fried%20Rice.jpg"  class="galley-image" alt="Chicken Fried Rice"></figure>
+        <li class="image-3 span-1-of-4">
+            <figure><img src="images/menu-items/Sushi/Rainbow%20Roll.jpg" class="galley-image" alt="Sushi">
+                <h3 class="heading-3 image-caption">Sushi</h3>
+            </figure>
         </li>
-        <li class="image-8 span-1-of-4">
-            <figure ><img src="images/menu-items/Seafood/Spicy%20Deep%20Fried%20Fish%20Filet.jpg" class="galley-image"  alt="Spicy Deep Fried Fish Filet"></figure>
+        <li class="image-4 span-1-of-4">
+            <figure><img src="images/menu-items/Chicken/Kung%20Pao%20Chicken.jpg" class="galley-image"
+                         alt="Kung pao chicken">
+                <h3 class="heading-3 image-caption">Kung pao chicken</h3>
+            </figure>
         </li>
     </ul>
-    <h3 class="heading-3">Pakistani Cuisine</h3>
-    <ul class="meals-showcase-3">
-        <li class="image-5 span-1-of-4" >
-            <figure ><img src="images/menu-items/Pakistani%20Food/Karahi.jpg"  class="galley-image" alt="Karahi"></figure>
+    <ul class="meals-showcase-2">
+        <li class="image-5 span-1-of-4">
+            <figure><img src="images/menu-items/Vegetable/Spicy%20Ma%20Po%20Tofu.jpg" class="galley-image"
+                         alt="Spicy Ma Po Tofu">
+                <h3 class="heading-3 image-caption">Spicy Ma Po Tofu</h3>
+            </figure>
         </li>
         <li class="image-6 span-1-of-4">
-            <figure ><img src="images/menu-items/Pakistani%20Food/Kabuli%20Pulao.jpg"  class="galley-image" alt="Kabuli Pulao"></figure>
+            <figure><img src="images/menu-items/Beef/Beef%20Fillet%20with%20Honey%20Sauce.jpg" class="galley-image"
+                         alt="Beef Fillet with Honey Sauce">
+                <h3 class="heading-3 image-caption">Beef Fillet with Honey Sauce</h3>
+            </figure>
         </li>
         <li class="image-7 span-1-of-4">
-            <figure ><img src="images/menu-items/Pakistani%20Food/biryani.jpg"  class="galley-image" alt="biryani"></figure>
+            <figure><img src="images/menu-items/Rice%20and%20Noodles/Combination%20Fried%20Rice.jpg"
+                         class="galley-image" alt="Chicken Fried Rice">
+                <h3 class="heading-3 image-caption">Chicken Fried Rice</h3>
+            </figure>
         </li>
         <li class="image-8 span-1-of-4">
-            <figure ><img src="images/menu-items/Pakistani%20Food/Nihari.jpg" class="galley-image"  alt="Nihari"></figure>
+            <figure><img src="images/menu-items/Seafood/Spicy%20Deep%20Fried%20Fish%20Filet.jpg" class="galley-image"
+                         alt="Spicy Deep Fried Fish Filet">
+                <h3 class="heading-3 image-caption">Spicy Deep Fried Fish Filet</h3>
+            </figure>
+        </li>
+    </ul>
+    <h3 class="heading-3 category-heading">Pakistani Cuisine</h3>
+    <ul class="meals-showcase-3">
+        <li class="image-5 span-1-of-4">
+            <figure><img src="images/menu-items/Pakistani%20Food/Karahi.jpg" class="galley-image" alt="Karahi">
+                <h3 class="heading-3 image-caption">Karahi</h3>
+            </figure>
+        </li>
+        <li class="image-6 span-1-of-4">
+            <figure><img src="images/menu-items/Pakistani%20Food/Kabuli%20Pulao.jpg" class="galley-image"
+                         alt="Kabuli Pulao">
+                <h3 class="heading-3 image-caption">Kabuli Pulao</h3>
+            </figure>
+        </li>
+        <li class="image-7 span-1-of-4">
+            <figure><img src="images/menu-items/Pakistani%20Food/biryani.jpg" class="galley-image" alt="biryani">
+                <h3 class="heading-3 image-caption">Biryani</h3>
+            </figure>
+        </li>
+        <li class="image-8 span-1-of-4">
+            <figure><img src="images/menu-items/Pakistani%20Food/Nihari.jpg" class="galley-image" alt="Nihari">
+                <h3 class="heading-3 image-caption">Nihari</h3>
+            </figure>
         </li>
     </ul>
 </section>
