ramen-rose-3> Add side menu and toggle button on smaller screen sizes instead of to menu

--- a/index.html
+++ b/index.html
@@ -40,22 +40,42 @@
 
                 </ul>
             </ul>
+            <div class="btn-sidebar">
+                <button class="btn-toggle"><i class="ion-android-menu"></i></button>
+            </div>
         </div>
     </nav>
 
+<div class="sidebar">
+    <div class="btn-close"><i class="ion-android-restaurant"></i></div>
+    <ul class="sidebar-menu">
+        <li class="btn-sidebar-menu"> <i class="ion-android-bar"></i><a href="html/menu.html">Menu</a></li>
+        <li class="btn-sidebar-book-table"><i class="ion-coffee"></i><a href="html/book-table.html">Book Table</a></li>
+        <li class="btn-sidebar-contact-us"><i class="ion-chatbox"></i><a href="html/contact-us.html">Contact Us</a></li>
+        <li class="btn-sidebar-about-us"><i class="ion-information-circled"></i><a href="html/about.html">About us</a></li>
+        <li class="btn-sidebar-my-account"><i class="ion-ios-cog"></i><a href="html/about.html">My Account</a></li>
+    </ul>
+    <div class="sidebar-account-dropdown">
+        <a class="profile"><i class="ion-person"></i>Profile</a>
+        <a class="offers"><i class="ion-pricetag"></i>Offers <span
+                class="offers-bubble-text bubble">100</span></a>
+        <a class="profile"><i class="ion-locked"></i>Change Password</a>
+        <a class="log-out"><i class="ion-log-out"></i>Log Out</a>
+    </div>
+</div>
 
-    <!--     User account Drop down menu-->
-    <!--            <nav class="navbar-dropdown">-->
-    <!--                <div class="row dropdown-content">-->
-    <!--                    <ul class="dropdown-options">-->
-    <!--                        <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
-    <!--                        <li><a class="offers"><i class="fas fa-tags"></i>Offers  <span-->
-    <!--                                class="offers-bubble-text bubble">100</span></a></li>-->
-    <!--                        <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
-    <!--                        <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
-    <!--                    </ul>-->
-    <!--                </div>-->
-    <!--            </nav>-->
+<!--         User account Drop down menu-->
+<!--                <nav class="navbar-dropdown">-->
+<!--                    <div class="row dropdown-content">-->
+<!--                        <ul class="dropdown-options">-->
+<!--                            <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>-->
+<!--                            <li><a class="offers"><i class="fas fa-tags"></i>Offers  <span-->
+<!--                                    class="offers-bubble-text bubble">100</span></a></li>-->
+<!--                            <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>-->
+<!--                            <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>-->
+<!--                        </ul>-->
+<!--                    </div>-->
+<!--                </nav>-->
 
 
     <div class="hero-text-box">
