ramen-rose-4> fixed the menu posiiton and user account button overflowing the header from right side

--- a/index.html
+++ b/index.html
@@ -33,10 +33,10 @@
                     </a></li>
 
                     <!--                    User account if user has signed in-->
-                    <!--                    <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>-->
-                    <!--                        <span-->
-                    <!--                                class="user-bubble-text bubble">100</span>-->
-                    <!--                    </a></li>-->
+                                        <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>
+                                            <span
+                                                    class="user-bubble-text bubble">100</span>
+                                        </a></li>
 
                 </ul>
             </ul>
