ramen-rose-4> Add smooth transition on side bar menu when it shows

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 
     <div class="sidebar">
         <div class="btn-close"><i class="ion-android-restaurant"></i></div>
+        <div class="sidebar-menu-options">
         <ul class="sidebar-menu">
             <li class="btn-sidebar-menu"><i class="ion-android-bar"></i><a href="html/menu.html">Menu</a></li>
             <li class="btn-sidebar-book-table"><i class="ion-ios-calendar"></i><a href="html/book-table.html">Book Table</a>
@@ -64,6 +65,7 @@
                     class="offers-bubble-text bubble">100</span></a>
             <a class="profile"><i class="ion-locked"></i>Change Password</a>
             <a class="log-out"><i class="ion-log-out"></i>Log Out</a>
+        </div>
         </div>
     </div>
 
