Ramen-rose-4> Add section of qualities of resturant and google play and apple store button
Ramen-rose-4> Add section of qualities of resturant and google play and apple store button as well as the mobile screen moqup

--- a/index.html
+++ b/index.html
@@ -49,23 +49,26 @@
     <div class="sidebar">
         <div class="btn-close"><i class="ion-android-restaurant"></i></div>
         <div class="sidebar-menu-options">
-        <ul class="sidebar-menu">
-            <li class="btn-sidebar-menu"><i class="ion-android-bar"></i><a href="html/menu.html">Menu</a></li>
-            <li class="btn-sidebar-book-table"><i class="ion-ios-calendar"></i><a href="html/book-table.html">Book Table</a>
-            </li>
-            <li class="btn-sidebar-contact-us"><i class="ion-chatbox"></i><a href="html/contact-us.html">Contact Us</a>
-            </li>
-            <li class="btn-sidebar-about-us"><i class="ion-information-circled"></i><a href="html/about.html">About
-                us</a></li>
-            <li class="btn-sidebar-my-account"><i class="ion-ios-cog"></i><a href="html/about.html">My Account</a></li>
-        </ul>
-        <div class="sidebar-account-dropdown">
-            <a class="profile"><i class="ion-person"></i>Profile</a>
-            <a class="offers"><i class="ion-pricetag"></i>Offers <span
-                    class="offers-bubble-text bubble">100</span></a>
-            <a class="profile"><i class="ion-locked"></i>Change Password</a>
-            <a class="log-out"><i class="ion-log-out"></i>Log Out</a>
-        </div>
+            <ul class="sidebar-menu">
+                <li class="btn-sidebar-menu"><i class="ion-android-bar"></i><a href="html/menu.html">Menu</a></li>
+                <li class="btn-sidebar-book-table"><i class="ion-ios-calendar"></i><a href="html/book-table.html">Book
+                    Table</a>
+                </li>
+                <li class="btn-sidebar-contact-us"><i class="ion-chatbox"></i><a href="html/contact-us.html">Contact
+                    Us</a>
+                </li>
+                <li class="btn-sidebar-about-us"><i class="ion-information-circled"></i><a href="html/about.html">About
+                    us</a></li>
+                <li class="btn-sidebar-my-account"><i class="ion-ios-cog"></i><a href="html/about.html">My Account</a>
+                </li>
+            </ul>
+            <div class="sidebar-account-dropdown">
+                <a class="profile"><i class="ion-person"></i>Profile</a>
+                <a class="offers"><i class="ion-pricetag"></i>Offers <span
+                        class="offers-bubble-text bubble">100</span></a>
+                <a class="profile"><i class="ion-locked"></i>Change Password</a>
+                <a class="log-out"><i class="ion-log-out"></i>Log Out</a>
+            </div>
         </div>
     </div>
 
@@ -216,6 +219,47 @@
     </ul>
 </section>
 
+<section class="section-qualities">
+    <div class="row">
+        <h2>What makes us different?</h2>
+    </div>
+    <div class="row">
+        <div class="col span-1-of-2">
+            <img src="images/device%20moqups/Ramen-Rose-mobile-screen.png" alt="Ramen Rose on Iphone"
+                 class="app-screen">
+        </div>
+        <div class="col span-1-of-2">
+            <div class="quality">
+                <div>1</div>
+                <p>Setting high standards when it comes to the food quality is vital for us</p>
+            </div>
+            <div class="quality">
+                <div>2</div>
+                <p>Exquisite dining experience</p>
+            </div>
+            <div class="quality">
+                <div>3</div>
+                <div>Ambient, clean and comfortable atmosphere</div>
+            </div>
+            <div class="quality">
+                <div>4</div>
+                <p>Find quality food at great prices, special discount deals for our subscribers</p>
+            </div>
+            <div class="quality">
+                <div>5</div>
+                <p>Home delivery available now!</p>
+            </div>
+            <div class="quality">
+                <div>6</div>
+                <p>Enjoy your meal after less than 20 minutes!</p>
+            </div>
+
+            <a href="#" class="btn-map"><img src="images/device%20moqups/appstore%20and%20google%20store%20small.png"
+                                             alt="Get Ramen Rose  on app store or google store">
+            </a>
+        </div>
+    </div>
+</section>
 </body>
 <script src="jquery/jquery-3.4.1.min.js"></script>
 <script src="js/index.js" rel="script"></script>
