Ramen-Rose-4> Add animations to the header and format the what makes us different section along with making it responsive
Ramen-Rose-4> Add animations to the header and format the what makes us different section along with making it responsive

--- a/index.html
+++ b/index.html
@@ -219,16 +219,16 @@
     </ul>
 </section>
 
-<section class="section-qualities">
+<section class="section-how-it-works">
     <div class="row">
-        <h2>What makes us different?</h2>
+        <h2 class="heading-2">What makes us different?</h2>
     </div>
     <div class="row">
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 quality-box">
             <img src="images/device%20moqups/Ramen-Rose-mobile-screen.png" alt="Ramen Rose on Iphone"
                  class="app-screen">
         </div>
-        <div class="col span-1-of-2">
+        <div class="col span-1-of-2 quality-box">
             <div class="quality">
                 <div>1</div>
                 <p>Setting high standards when it comes to the food quality is vital for us</p>
@@ -239,7 +239,7 @@
             </div>
             <div class="quality">
                 <div>3</div>
-                <div>Ambient, clean and comfortable atmosphere</div>
+                <p>Ambient, clean and comfortable atmosphere</p>
             </div>
             <div class="quality">
                 <div>4</div>
@@ -254,8 +254,11 @@
                 <p>Enjoy your meal after less than 20 minutes!</p>
             </div>
 
-            <a href="#" class="btn-map"><img src="images/device%20moqups/appstore%20and%20google%20store%20small.png"
-                                             alt="Get Ramen Rose  on app store or google store">
+            <a href="#" class="btn-app"><img src="images/device%20moqups/get%20app%20on%20appstore%20medium.png"
+                                             alt="Get Ramen Rose  on app store">
+            </a>
+            <a href="#" class="btn-app"><img src="images/device%20moqups/get%20app%20on%20google%20store%20medium.png"
+                                             alt="Get Ramen Rose  on  google store">
             </a>
         </div>
     </div>
