--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link href="css/style.css" rel="stylesheet" type="text/css">
     <link href="css/grid.css " rel="stylesheet" type="text/css">
     <link href="css/ionicons.min.css " rel="stylesheet" type="text/css">
+
 </head>
 <body>
 <header class="header">
@@ -33,7 +34,7 @@
                     </a></li>
 
                     <!--                    User account if user has signed in-->
-                    <li><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>
+                    <li class="user"><a href="#" class="btn-user"><span><i class="ion-ios-contact-outline"></i></span>
                         <span
                                 class="user-bubble-text bubble">100</span>
                     </a></li>
