Ramen-rose-4> Add animation to the drop down menu of user account
Ramen-rose-4> Add animation to the drop down menu of user account

--- a/index.html
+++ b/index.html
@@ -74,14 +74,14 @@
     </div>
 
     <!--         User account Drop down menu-->
-    <nav class="navbar-dropdown">
+    <nav class="navbar-dropdown" id = "navbar-dropdown">
         <div class="row dropdown-content">
             <ul class="dropdown-options">
-                <li><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>
-                <li><a class="offers"><i class="fas fa-tags"></i>Offers <span
+                <li class="dropdown-option"><a class="profile"><i class="fas fa-user-edit"></i>Profile</a></li>
+                <li class="dropdown-option"><a class="offers"><i class="fas fa-tags"></i>Offers <span
                         class="offers-bubble-text bubble">100</span></a></li>
-                <li><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>
-                <li><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
+                <li class="dropdown-option"><a class="profile"><i class="fas fa-unlock-alt"></i>Change Password</a></li>
+                <li class="dropdown-option"><a class="log-out"><i class="fas fa-sign-out-alt"></i>Log Out</a></li>
             </ul>
         </div>
     </nav>
