Ramen-rose-4 > Remove extra margin fromthe images in favourite meals category and correct toggle button with shadow and hover and click effects
Ramen-rose-4 > Remove extra margin fromthe images in favourite meals category and correct toggle button with shadow and hover and click effects

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
 <section class="section-favourite-meals">
     <h2 class="heading-2 favourite-meals-heading">Our Famous Dishes</h2>
     <h3 class="heading-3 category-heading">Japanese cuisine</h3>
-    <ul class="meals-showcase-1">
+    <ul class="meals-showcase-1 clear-fix">
         <li class="span-1-of-4">
             <figure><img src="images/menu-items/Seafood/Spicy%20Deep%20Fried%20Fish%20Filet.jpg" class="galley-image"
                          alt="Spicy Deep Fried Fish Filet">
@@ -167,7 +167,7 @@
         </li>
 
     </ul>
-    <ul class="meals-showcase-2">
+    <ul class="meals-showcase-2 clear-fix">
         <li class="span-1-of-4">
             <figure><img src="images/menu-items/Chicken/Kung%20Pao%20Chicken.jpg" class="galley-image"
                          alt="Kung pao chicken">
@@ -195,7 +195,7 @@
 
     </ul>
     <h3 class="heading-3 category-heading">Pakistani Cuisine</h3>
-    <ul class="meals-showcase-3">
+    <ul class="meals-showcase-3 clear-fix">
         <li class="span-1-of-4 ">
             <figure><img src="images/menu-items/Pakistani%20Food/Karahi.jpg" class="galley-image" alt="Karahi">
                 <h3 class="heading-3 image-caption" id="gallery-image-9">Karahi</h3>
