Ramen-Rose-5> Add cities pictures to the page for the frachises of the resturant
Ramen-Rose-5> Add cities pictures to the page for the frachises of the resturant

--- a/index.html
+++ b/index.html
@@ -264,6 +264,38 @@
         </div>
     </div>
 </section>
+<section class="Cities-having-our-franchise">
+    <div class="row">
+        <h2 class="heading-2">We're currently in these cities</h2>
+    </div>
+    <div class="cities"></div>
+<div class="city span-1-of-3">
+    <img src="images/Cities/islamabad.jpg">
+    <div class="city-caption">
+    </div>
+</div>
+    <div class="city span-1-of-3">
+        <img src="images/Cities/lahore.jpg">
+        <div class="city-caption">
+        </div>
+    </div>
+    <div class="city span-1-of-3">
+        <img src="images/Cities/karachi.jpg">
+        <div class="city-caption">
+        </div>
+    </div>
+<!--    Islamabad-->
+<!--    1000+ top Chefs-->
+<!--    @Ramen_rose_isb-->
+
+<!--    Lahore-->
+<!--    1500+ top Chefs-->
+<!--    @Ramen_rose_lhr-->
+
+<!--    Karachi-->
+<!--    2000+ top Chefs-->
+<!--    @Ramen_rose_khi-->
+</section>
 </body>
 <script src="jquery/jquery-3.4.1.min.js"></script>
 <script src="js/index.js" rel="script"></script>
